site/docs/v0.4.0/zh/components/spinner.mdx
# 加载指示器

<Callout title="展示型工具" icon="info">
  Spinner 是已文档化的标记工具，不是带控制器的组件。没有 `spinner.js` 或 `spinner.css`。A3S UI 发布稳定约定（`role="status"` + `animate-spin`），使 HTML / React / Vue 示例与测试、适配器共用同一选择器。
</Callout>

<Preview class="w-full max-w-xs">
<article class="item bg-muted/50 border-transparent">
  <figure><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg></figure>
  <section> <h3>Processing payment...</h3></section>
  <aside class="tabular-nums text-sm">$100.00</aside>
</article>
</Preview>

## 用法

<Steps>
  <Step title="引入 CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者仅当该组件不与其他 A3S UI 组件组合时才导入 Tailwind。

```css
@import "tailwindcss";
```

Spinner 是纯 HTML 加上 Tailwind 工具类，没有专用的 CSS 组件文件。

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="添加加载指示器 HTML">

加载指示器使用纯 HTML、`loader-circle` Lucide 图标和 `animate-spin` Tailwind 工具类。添加 `role="status"` 和 `aria-label="加载中"` 以提供无障碍状态说明。

用户启用减少动效后，完整 A3S UI 样式会停止旋转。请保留无障碍标签和相邻状态文案，让静止图标仍能清楚表达处理进度。

```html
<svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
```

  </Step>
</Steps>

## 示例

### 尺寸

使用 `size-*` 工具类调整加载指示器的大小。

<Preview>
<div class="flex items-center gap-6"><svg aria-label="Loading" role="status" class="size-3 animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg><svg aria-label="Loading" role="status" class="size-4 animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg><svg aria-label="Loading" role="status" class="size-6 animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg><svg aria-label="Loading" role="status" class="size-8 animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg></div>
</Preview>

### 按钮

在按钮中添加加载指示器来表达加载状态。它可以放在标签之前或之后，按钮会自动处理间距。

<Preview>
<div class="flex flex-col items-center gap-4">
  <button class="btn" data-size="sm" disabled><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Loading...
  </button>
  <button class="btn" data-variant="outline" data-size="sm" disabled><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Please wait
  </button>
  <button class="btn" data-variant="secondary" data-size="sm" disabled><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Processing
  </button>
</div>
</Preview>

### 徽章

在徽章中添加加载指示器来表达加载状态。它可以放在标签之前或之后，徽章会自动处理间距。

<Preview>
<div class="flex items-center gap-4">
  <span class="badge"><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Syncing
  </span>
  <span class="badge" data-variant="secondary"><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Updating
  </span>
  <span class="badge" data-variant="outline"><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
    Processing
  </span>
</div>
</Preview>

### 输入组

<Preview class="w-full max-w-md">
<div class="flex w-full max-w-md flex-col gap-4">
  <div class="input-group">
    <input aria-label="消息" placeholder="Send a message..." disabled />
    <span data-align="inline-end"><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg></span>
  </div>
  <div class="input-group">
    <textarea aria-label="消息" placeholder="Send a message..." disabled></textarea>
    <footer data-align="block-end"><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg>
      Validating...
      <button type="button" class="btn ms-auto" data-size="icon-sm"><svg class="lucide lucide-arrow-up" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m5 12 7-7 7 7" /><path d="M12 19V5" /></svg>
        <span class="sr-only">Send</span>
      </button>
    </footer>
  </div>
</div>
</Preview>

### 空

<Preview class="w-full">
<div class="empty w-full">
  <header>
    <figure><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg></figure>
    <h3>Processing your request</h3>
    <p>Please wait while we process your request. Do not refresh the page.</p>
  </header>
  <section> <button class="btn" data-variant="outline" data-size="sm">Cancel</button></section>
</div>
</Preview>

## RTL

加载指示器的布局遵循文档方向。周围间距与方向有关时，请使用逻辑属性工具类。

<Preview class="w-full max-w-xs">
<article class="item bg-muted/50 border-transparent" dir="rtl">
  <figure><svg aria-label="Loading" role="status" class="animate-spin lucide lucide-loader-circle" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-6.219-8.56" /></svg></figure>
  <section> <h3>جاري معالجة الدفع...</h3></section>
  <aside class="tabular-nums text-sm">١٠٠.٠٠ دولار</aside>
</article>
</Preview>

## React

```tsx
import { Spinner } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <Spinner
      as="svg"
      className="lucide lucide-loader-circle"
      xmlns="http://www.w3.org/2000/svg"
      width="24"
      height="24"
      viewBox="0 0 24 24"
      fill="none"
      stroke="currentColor"
      strokeWidth="2"
      strokeLinecap="round"
      strokeLinejoin="round"
    >
      <path d="M21 12a9 9 0 1 1-6.219-8.56"></path>
    </Spinner>
  );
}
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。

## Vue

```vue
<script setup lang="ts">
import { Spinner } from "@a3s-lab/ui/vue";
</script>

<template>
  <Spinner
    as="svg"
    class="lucide lucide-loader-circle"
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    ><path d="M21 12a9 9 0 1 1-6.219-8.56"></path
  ></Spinner>
</template>
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。
